--- a/CountWithFriends/Base.lproj/LaunchScreen.storyboard
+++ b/CountWithFriends/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,31 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunsetImage" translatesAutoresizingMaskIntoConstraints="NO" id="Ez7-Xe-DDB">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group" translatesAutoresizingMaskIntoConstraints="NO" id="eWk-Ha-pFr">
+                                <rect key="frame" x="157.5" y="248.5" width="285" height="103"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96078431372549022" green="0.5725490196078431" blue="0.24313725490196078" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Ez7-Xe-DDB" secondAttribute="bottom" id="8bL-CG-suL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eWk-Ha-pFr" secondAttribute="trailing" constant="30" id="HJW-MC-2ij"/>
+                            <constraint firstItem="Ez7-Xe-DDB" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="OUe-am-IK2"/>
+                            <constraint firstItem="eWk-Ha-pFr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="XbO-xf-dhc"/>
+                            <constraint firstAttribute="trailing" secondItem="Ez7-Xe-DDB" secondAttribute="trailing" id="i2d-gM-rdY"/>
+                            <constraint firstItem="eWk-Ha-pFr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="30" id="lcm-f1-OZ5"/>
+                            <constraint firstItem="eWk-Ha-pFr" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qPM-aD-vhl"/>
+                            <constraint firstItem="Ez7-Xe-DDB" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="vJo-hK-RK4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="HJW-MC-2ij"/>
+                                <exclude reference="lcm-f1-OZ5"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +49,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Group" width="285" height="103"/>
+        <image name="SunsetImage" width="768" height="1024"/>
+    </resources>
 </document>
