--- a/CountWithFriends/Base.lproj/Main.storyboard
+++ b/CountWithFriends/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="R9x-nT-NJ6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="R9x-nT-NJ6">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -1002,10 +1002,9 @@
                                                             </connections>
                                                         </button>
                                                         <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsG-Fa-Ejb">
-                                                            <rect key="frame" x="327" y="14" width="10" height="16"/>
+                                                            <rect key="frame" x="320.5" y="9" width="16.5" height="26"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="16" id="Jfd-tZ-lAd"/>
-                                                                <constraint firstAttribute="width" constant="10" id="YKs-KI-tug"/>
+                                                                <constraint firstAttribute="width" secondItem="jsG-Fa-Ejb" secondAttribute="height" multiplier="5:8" id="4yM-bR-FGh"/>
                                                             </constraints>
                                                             <state key="normal" image="Trash"/>
                                                             <connections>
@@ -1033,6 +1032,9 @@
                                                         <constraint firstItem="0D8-A2-cgv" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="11" id="zVU-Z9-JRc"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
+                                                <constraints>
+                                                    <constraint firstItem="jsG-Fa-Ejb" firstAttribute="height" secondItem="GJF-w2-PwL" secondAttribute="height" multiplier="0.6" id="Fmm-MA-Luh"/>
+                                                </constraints>
                                                 <connections>
                                                     <outlet property="equalLabel" destination="zTU-nv-rJi" id="Y4p-QD-mOO"/>
                                                     <outlet property="firstOperandLabel" destination="0D8-A2-cgv" id="vkz-dI-Tsk"/>
